[project]
name = "ai-sec-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-whois>=0.9.6",
    "rich>=15.0.0",
]
